kubernetes/applications/morphos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: morphos
  namespace: apps
  labels:
    app: morphos
spec:
  ports:
    - port: 87880807
      name: web
  selector:
    app: morphos
