kubernetes/applications/morphos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: morphos-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host file-converter.mcmumf.dev
      secretName: morphos-cert
  rules:
    - host: *host
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: morphos
              port:
                number: 8080
